--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ footer p {
 }
 
 .project-card.project-one {
-  background-image: url('image.png');
+  background-image: url('images/image.png');
   background-size: cover;
   background-position: center;
   color: #fff;
